[package]
name = "wasm"
version = "0.1.0"
authors = ["Ivan Schuetz <ivanhp978@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.34"
algonaut = { git = "https://github.com/manuelmauro/algonaut", branch = "main" }
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.64"
wasm-bindgen-futures = "0.4.24"
